objects/dlrs__DeclarativeLookupRollupSummaries__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>dlrs__CalculateJobScopeSize__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Calculate Job Scope Size</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dlrs__HideManageLookupRollupSummariesInfo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Manage Lookup Rollup Summaries Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dlrs__ScheduledJobScopeSize__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Scheduled Job Scope Size</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Declarative Lookup Rollup Summaries</label>
</CustomObject>